Mon Apr  9 09:24:32 2007  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (disconnect): call shutdown for
	  SSLSocket. Thanks, Technorama Ltd.

Sun Apr  8 13:28:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (defined_expr): test arguments of NODE_CALL and so
	  on as well as NODE_ATTRASGN.  [ruby-core:10886]

Fri Apr  6 10:56:29 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_get_group): get rid of
	  warning. we are aware of it.

Fri Apr  6 04:00:24 2007  Technorama Ltd.  <oss-ruby@technorama.net>

	* ext/openssl/ossl_{bn,x509{attr,cert,name,store}}.c:
	  Add documentation.

Thu Apr  5 17:59:19 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (defined_expr): support for assignment.
	  [ruby-core:10867]

	* compile.h (ADD_CATCH_ENTRY): removed temporary variable.

Thu Apr  5 15:13:34 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c (ossl_ssl_session_alloc): should
	  return value.

Thu Apr  5 14:58:49 2007  Technorama Ltd. <oss-ruby@technorama.net>
	* ext/openssl/ossl_pkcs5.c: New module.

	* ext/openssl/ossl_{cipher,digest,pkcs7,pkcs12}.c:
	  Remove redundant module namespace.

	* ext/openssl/lib/openssl/{cipher,digest}.rb
	  Add backwards compatibile classes for rearranged classes.

	* ext/openssl/ossl_{pkcs7,pkcs12}.c: Add documentation.

Thu Apr  5 00:42:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_notimplement), io.c (pipe_open): removed definite
	  articles and UNIX manual section from messages.  [ruby-dev:30690]

Wed Apr  4 17:09:17 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (pipe_open): refined the message of NotImplementedError.
	  [ruby-dev:30685]

Wed Apr  4 12:29:02 2007  NAKAMURA Usaku  <usa@ruby-lang.org>

	* error.c (rb_notimplement): should show the name of this func,
	  not callee.

Wed Apr  4 10:18:04 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (popen_exec): should not close close-on-exec FDs.